--- a/JS/Index.html
+++ b/JS/Index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Programation oriente à object en JavaScript</h1>
-
-    
 </body>
+<script src="Account.js"></script>
+<script src="Car.js"></script>
 <script src="./Index.js"></script>
 </html>
